--- a/env-dsci-group-16.yaml
+++ b/env-dsci-group-16.yaml
@@ -1,7 +1,7 @@
 # Install the course conda environment by running 
 # the following command in your conda base environment:
 # conda env create -f env-dsci-573.yaml
-name: '573'
+name: 'environment'
 channels:
   - conda-forge
   - defaults
